# simple_nn_1

./: .gitignore  README.md  client_side.py  interface.py  main.py  pyproject.toml  test_main.py
data/: get_data.py
model/: NNmodel.py  nn_model-v1.00.pth  train_model.py  train_nn.py
