[project]
name = "simple_nn_1"
version = "0.1.0"
description = "Simple Neural Network Prediction Model + FastAPI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "pytest>=8.3.5",
    "requests>=2.32.3",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "uvicorn[standard]>=0.34.2",
]
